# AIboy996.GitHub.io

./: .gitconfig  .gitignore  .gitmessage  .gitmodules  .nojekyll  2048.js  2048.py  404.html  CNAME  LICENSE  README.md  _ai_summary_cache.json  _ai_summary_cache2.json  _ai_summary_cache_chatgpt.json  _ai_summary_cache_tongyi.json  ads.txt  atom.xml  build  feed_rss_created.xml  feed_rss_updated.xml  gitmessage  index.html  mkdocs.yml  nav.yml  plugins_full.yml  plugins_simplify.yml  pyproject.toml  requirements.txt  runserver.py  sitemap.xml  sync
About/: about.html  ads.html  devices.html  hobby.html  index.html  links.html  log.html  map.html  resume.html
Blog/: index.html
Go/: go_project.html  go_semicolons.html  index.html  why_go.html
Note/: drug.html  index.html  software.html
Playground/: index.html
Project/: AirPrint-with-Python.html  Course-Selection-System.html  bilibili-bangumi.html  bilibili_poster.html  dzd.html  high_school_math.html  index.html  mkdocs-ai-summary.html  npnn.html  plt-gallery.html  pymd.html  qrq.html
Python/: command_line.html  index.html  pre_python.html  script.html
SomeMath/: index.html
Statistics/: index.html
Tags/: index.html
archives/: index.html
docs/: index.en.md  index.md  playground.md  tags.md
en/: index.html
js/: baidu.js
overrides/: 404.html  blog_with_map.html  custom_blog.html  custom_index.html  main.html  tags.html
playground/: index.html
plugins/: setup.py
script/: snow.js
scripts/: build.sh  clean_exif.sh  compress.sh  cwebp.sh  double_check.sh  serve.sh  sync.sh
styles/: main.css
(+1254 files in other folders)
